# questionnaire-interaction

./: .env.exmple  .gitignore  README.md  compose.yaml
backend/: Dockerfile  README.md  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/seed_data/: items.json  questionnaires.json
backend/alembic/versions/: 97956a213ec7_seed_data.py  c2cf21c0e4e2_initial_tables.py
backend/app/: config.py
backend/app/adapter/: __init__.py  answer_repository.py  in_memory_data.py  item_repository.py  questionnaire_repository.py  session_repository.py  user_repository.py
backend/app/controller/: questionnaire_controller.py
backend/app/core/: config.py  database.py
backend/app/data/: questionnaires.py
backend/app/middleware/: api_key_middleware.py
backend/app/models/: __init__.py  answers.py  base.py  common.py  item.py  items.py  questionnaire.py  questionnaires.py  schemas.py  session.py  sessions.py  user.py  users.py
backend/app/schema/: __init__.py  answers.py  common.py  items.py  questionnaires.py  sessions.py  users.py
backend/app/service/: __init__.py  answer_service.py  questionnaire_service.py  results_service.py  session_service.py  user_service.py
backend/docs/: database.md
backend/tests/: conftest.py
backend/tests/adapter/: test_answer_repository.py  test_in_memory_adapter.py  test_item_repository.py  test_questionnaire_repository.py  test_session_repository.py  test_user_repository.py
backend/tests/controller/: test_questionnaire_controller.py
backend/tests/service/: test_answer_service.py  test_questionnaire_service.py  (+1 more)
(+108 files in other folders)
